Changelog for AjaxForm.

1.0.0-rc
==============
- Force attribute "method=post" to form.

1.0.0-beta1
==============
- Improved adding class "ajax_form" to form.
- Improved snippet parameters.

1.0.0-beta0
==============
- Initial release.