@@ -8,6 +8,7 @@ $AjaxForm->initialize($modx->context->key);
 $snippet = $modx->getOption('snippet', $scriptProperties, 'FormIt', true);
 $tpl = $modx->getOption('form', $scriptProperties, 'tpl.AjaxForm.example', true);
 $formSelector = $modx->getOption('formSelector', $scriptProperties, 'ajax_form', true);
+if (!isset($placeholderPrefix)) {$placeholderPrefix = 'fi.';}
 
 /** @var modChunk $chunk */
 if ($chunk = $modx->getObject('modChunk', array('name' => $tpl))) {
@@ -36,9 +37,9 @@ if ($chunk = $modx->getObject('modChunk', array('name' => $tpl))) {
 
 	// Add action for form processing
 	$hash = md5(implode($scriptProperties));
-	$action = '<input type="hidden" name="action" value="'.$hash.'" />';
+	$action = '<input type="hidden" name="af_action" value="'.$hash.'" />';
 	if ((strpos($content, '</form>') !== false)) {
-		if (preg_match('/<input.*?name="action".*?>/', $content, $matches)) {
+		if (preg_match('/<input.*?name="af_action".*?>/', $content, $matches)) {
 			$content = str_replace($matches[0], '', $content);
 		}
 		$content = str_replace('</form>', "\n\t$action\n</form>", $content);
@@ -46,6 +47,22 @@ if ($chunk = $modx->getObject('modChunk', array('name' => $tpl))) {
 
 	// Save settings to user`s session
 	$_SESSION['AjaxForm'][$hash] = $scriptProperties;
+
+	// Form was submitted without ajax
+	if (!empty($_REQUEST['af_action'])) {
+		$AjaxForm->process($_REQUEST['af_action'], $_REQUEST);
+	}
+	else {
+		// Remove FormIt placeholders for faster page load
+		$modx->parser->collectElementTags($content,$matches);
+		$pls = array();
+		foreach ($matches as $v) {
+			if (strpos($v[0], $placeholderPrefix) !== false) {
+				$pls[] = $v[0];
+			}
+		}
+		$content = str_replace($pls, '', $content);
+	}
 
 	// Return chunk
 	return $content;
