@@ -3,6 +3,7 @@ Changelog for AjaxForm.
 1.0.0-rc
 ==============
 - Force attribute "method=post" to form.
+- Added support for sending form without javascript.
 
 1.0.0-beta1
 ==============
